<resources>
    <string name="app_name">BorboletaApp</string>
    <string name="title_active_login">Firebase Login</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="current_password">Contraseña actual</string>
    <string name="name">Nombre completo</string>
    <string name="email">Correo</string>
    <string name="user">Usuario</string>
    <string name="login">Login</string>
    <string name="repeat_password">Confirma la contraseña</string>
    <string name="signup">Sign Up</string>
    <string name="text_signup">No tienes cuenta?</string>
    <string name="link_signup">Sin up</string>
    <string name="ingresarcongoogle">Ingresar con</string>
    <string name="all">TODO</string>
    <string name="user_email">userdefault@gmail.com</string>
    <string name="user_name">User Default</string>
    <string name="update_profile">Guardar</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="forget_password">¿olvidaste tu contraseña?</string>
    <string name="title_check_email">Verificacion de Email</string>
    <string name="subtitle_check_email">Para completar su registro. ¡Por favor! verifica su correo y después de clic en continuar.</string>
    <string name="continue_check_email">Continuar</string>
    <string name="title_account_recovery">Recuperación de la cuenta</string>
    <string name="subtitle_account_recovery">Ingresa tu email para que se te pueda enviar un correo con los pasos para cambiar tu contraseña.</string>
    <string name="recovery_account">Enviar</string>
    <string name="title_update_password">Cambio de contraseña</string>
    <string name="subtitle_update_password">Por motivos de seguridad para cambiar tu contraseña, primero debes ingresar tu contraseña actual.</string>
    <string name="title_delete_account">Eliminar cuenta</string>
    <string name="subtitle_delete_account">Por motivos de seguridad para eliminar tu cuenta por completo, debes de ingresar tu contraseña.</string>
    <string name="delete">Eliminar</string>
    <string name="pie_splash">Lorem ipsum dolor sit amet, consectetur\nadipiscing elit. Praesent non nisi at turpis\nhendrerit gravida.</string>
    <string name="buttom_continue">Continue</string>
    <string name="nameRegistration">Nombre(s)</string>
    <string name="lastNameFRegistration">Apellido Paterno</string>
    <string name="lastNameMRegistration">Apellido Materno</string>
    <string name="dayRegistration">DD</string>
    <string name="monthRegistration">MM</string>
    <string name="yearRegistration">AAAA</string>
    <string name="genderRegistration">Género</string>
    <string name="pronounRegistration">Pronombre</string>
    <string name="uploadImageRegistration">Sube una foto de perfil :)</string>
    <string name="register">Registrate</string>
    <string name="next">Continua</string>

    <!--Filtros Example-->
    <string name="filtro1">Ansiedad</string>
    <string name="filtro2">Empredimiento</string>
    <string name="filtro3">Depresión</string>
    <string name="filtro4">Exito</string>
    <string name="filtro5">Inclusión</string>
    <string name="filtro6">Objetivos</string>
    <string name="filtro7">Proyectos</string>
    <string name="filtro8">Estudios</string>
    <string name="filtro9">Presión</string>
    <string name="filtro10">Cansancio</string>

    <!--FilterActivity -->
    <string name="subtitle1">¡Permitenos conocerte!</string>
    <string name="subtitle2">Selecciona los temas de tu interés</string>

    <!-- variables para logueo de facebook-->

    <string name="facebook_app_id">649907890038734</string>
    <string name="fb_login_protocol_scheme">fb649907890038734</string>
    <string name="facebook_client_token">05682a50d28db586f27e565b0cbc6fee</string>
    <string name="logout">Cerrar Sesión</string>

    <!--Configuration.kt Strings -->
    <string name="userInfo">Información de usuario</string>
    <string name="nombreInfo">Nombre</string>
    <string name="apellidoPadre">Apellido paterno</string>
    <string name="apellidoMadre">Apellido materno</string>
    <string name="fechaNacimiento">Cumpleaños</string>
    <string name="generoConfiguration">Género</string>
    <string name="pronombreConfiguration">Pronombre</string>

    <!-- AllSet.kt-->
    <string name="allSet">Has sido registrado</string>


</resources>
