<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".SignUpActivity">

    <!--
    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/all"
        android:layout_marginStart="16dp" />
    -->
    <LinearLayout
        android:id="@+id/linearLayout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView0"
            android:layout_width="415dp"
            android:layout_height="240dp"
            android:contentDescription="@string/all"
            android:paddingTop="0dp"
            app:srcCompat="@drawable/edificios"
            tools:ignore="VectorDrawableCompat" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="190dp"
            android:layout_height="100dp"
            android:contentDescription="@string/all"
            app:srcCompat="@drawable/signinimg"
            tools:ignore="VectorDrawableCompat" />

        <!--
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_active_login"
            android:textColor="@color/black"
            android:textSize="24sp" />
        -->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.085">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="54dp"
            android:layout_marginTop="24dp"
            android:elevation="6dp"
            android:layout_marginRight="54dp"
            android:autofillHints="@string/email"
            android:background="@drawable/ic_field"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:soundEffectsEnabled="false"
            android:textColor="#000000"
            android:textColorHint="#0C2049"
            android:textSize="15sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="54dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="54dp"
            android:elevation="6dp"
            android:autofillHints="@string/password"
            android:background="@drawable/ic_field"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:padding="10dp"
            android:shadowDy="0"
            android:shadowRadius="0"
            android:textColor="#000000"
            android:textColorHint="#0C2049"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/repeatPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="54dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="54dp"
            android:autofillHints="@string/repeat_password"
            android:background="@drawable/ic_field"
            android:drawablePadding="16dp"
            android:elevation="6dp"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:padding="10dp"
            android:shadowColor="#3F3B3B"
            android:shadowDy="0"
            android:shadowRadius="0"
            android:textColor="#000000"
            android:textColorHint="#0C2049"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="82dp"
            android:background="@drawable/ic_buttom"
            android:paddingLeft="64dp"
            android:paddingRight="64dp"
            android:text="@string/buttom_continue"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>