<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activities.SignInActivity">

    <LinearLayout
        android:id="@+id/linearLayout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView0"
            android:layout_width="415dp"
            android:layout_height="240dp"
            android:contentDescription="@string/all"
            android:paddingTop="0dp"
            app:srcCompat="@drawable/edificios"
            tools:ignore="VectorDrawableCompat" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:elevation="6dp"
        android:outlineAmbientShadowColor="#000"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="190dp"
            android:layout_height="100dp"
            android:contentDescription="@string/all"
            app:srcCompat="@drawable/signinimg"
            tools:ignore="VectorDrawableCompat" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.087">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="54dp"
            android:layout_marginRight="54dp"
            android:autofillHints="@string/user"
            android:elevation="6dp"
            android:background="@drawable/ic_field"
            android:drawablePadding="16dp"
            android:drawableTint="#3E3987"
            android:ems="10"
            android:hint="@string/user"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:shadowColor="#3F3B3B"
            android:shadowDy="0"
            android:shadowRadius="0"
            android:textColor="#000000"
            android:textColorHint="#0C2049"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="54dp"
            android:layout_marginTop="22dp"
            android:layout_marginRight="54dp"
            android:autofillHints="@string/password"
            android:background="@drawable/ic_field"
            android:elevation="6dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:shadowColor="#3F3B3B"
            android:shadowDy="0"
            android:shadowRadius="0"
            android:textColor="#000000"
            android:textColorHint="#0C2049"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/recoveryAccountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="end"
            android:text="@string/forget_password"
            android:textAlignment="center"
            android:textColor="#3D3B8E"
            android:textSize="16sp"
            tools:ignore="RtlCompat" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInAppCompatButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/ic_buttom"
            android:fontFamily="@font/pt_serif"
            android:paddingLeft="64dp"
            android:paddingRight="64dp"
            android:text="@string/login"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInButtom"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/ic_buttom"
            android:fontFamily="@font/pt_serif"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/signup"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ingresar_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="62dp"
            android:layout_marginEnd="24dp"
            android:gravity="end"
            android:text="@string/ingresarcongoogle"
            android:textAlignment="center"
            android:textColor="#6883BA"
            android:textSize="12sp"
            tools:ignore="RtlCompat" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout0"
        app:layout_constraintVertical_bias="0.871">

        <ImageView
            android:id="@+id/twitter"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/all"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/twitter"
            tools:ignore="VectorDrawableCompat" />

        <ImageView
            android:id="@+id/imgGoogle"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/all"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/google"
            tools:ignore="VectorDrawableCompat" />

        <ImageView
            android:id="@+id/facebook"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/all"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/facebook"
            tools:ignore="VectorDrawableCompat" />


        <!--
        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="0"
            android:text="@string/link_signup"
            android:textColor="#ff9900"
            android:textSize="24sp" />
         -->
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>