<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layoutDescription="@xml/activity_all_set_scene"
    tools:context=".activities.AllSetActivity">

    <LinearLayout
        android:id="@+id/container_build"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView0"
            android:layout_width="415dp"
            android:layout_height="240dp"
            android:contentDescription="@string/all"
            android:paddingTop="0dp"
            app:srcCompat="@drawable/edificios"
            tools:ignore="VectorDrawableCompat" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/Container_palomita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:alpha="1.0"
            android:contentDescription="@string/all"
            app:srcCompat="@drawable/comprobado"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/user_info"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="54dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="54dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/pt_serif"
            android:padding="6dp"
            android:singleLine="false"
            android:text="@string/allSet"
            android:textAlignment="center"
            android:textColor="#3D3B8E"
            android:textSize="22sp"
            android:textStyle="normal|bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Container_palomita"
        app:layout_constraintVertical_bias="0.742">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/botonListo"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/ic_buttom"
            android:paddingLeft="64dp"
            android:paddingRight="64dp"
            android:text="@string/register"
            android:textColor="@color/white" />
    </LinearLayout>


</androidx.constraintlayout.motion.widget.MotionLayout>